--- a/mybook-client/src/app/app.component.html
+++ b/mybook-client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-card>
+<mat-card class="text-center">
   <h1>Hello Angular Material!</h1>
 </mat-card>
 
