Setting Up Routing

--- a/mybook-client/src/app/app.component.html
+++ b/mybook-client/src/app/app.component.html
@@ -1,5 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<mat-card class="text-center">
-  <h1>Hello Angular Material!</h1>
-</mat-card>
+<a routerLink="/login">Login</a>
 
+<router-outlet></router-outlet>
